force-app/main/default/objects/CEL_unsubscribe__c/CEL_unsubscribe__c.object-meta.xml
<CustomObject>
    <label>Unsubscribe</label>
    <nameField>
        <label>Unsubscribe Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unsubscribes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>