force-app/main/default/objects/CEL_unsubscribe__c/fields/cel_account_id__c.field-meta.xml
<CustomField>
    <fullName>cel_account_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Unsubscribes</relationshipLabel>
    <relationshipName>Unsubscribes</relationshipName>
    <type>Lookup</type>
</CustomField>