force-app/main/default/objects/CEL_unsubscribe__c/fields/cel_unsub_time__c.field-meta.xml
<CustomField>
    <fullName>cel_unsub_time__c</fullName>
    <label>Unsub time</label>
    <type>DateTime</type>
</CustomField>